--- a/_posts/2005-12-31-archives.md
+++ b/_posts/2005-12-31-archives.md
@@ -10,3 +10,4 @@ Voici l'un des projets que j'ai réalisé à l'École Polytechnique. Je n'ai pas
 
 * [Rendu à base d'images]({% link archives/2002-05-01-rendu-a-bases-d-images/index.html %})
 
+> Le rendu à base d'image est une technique qui permet de synthétiser des prises de vue d'une scène 3D à partir d'autres prises de vue, donc sans utiliser d'informations sur la géométrie de la scène.
