--- a/_posts/2017-01-22-ebox-alert-2.md
+++ b/_posts/2017-01-22-ebox-alert-2.md
@@ -5,9 +5,13 @@ published: true
 comments: false
 ---
 
-Suite du [post sur ebox-alert]({% post_url 2017-01-21-ebox-alert %}). Je vous disais que EBOX a prévu un certain nombre de mesure pour éviter que des outils automatiques viennent consulter leur portail de suivi de la consommation, principalement parce que cela surchargerait leurs serveurs, surtout si ces outils sont mal configurés.
+Dans l'[article précédent]({% post_url 2017-01-21-ebox-alert %}), je vous disais que EBOX a prévu un certain nombre de mesures pour éviter que des outils automatiques viennent consulter leur portail de suivi de la consommation, principalement parce que cela surchargerait leurs serveurs, surtout si ces outils sont mal configurés :
 
+* Après 5 tentatives de consultation de la consommation pour un même code client, on reçoit un message d'erreur nous disant de revenir dans une heure
+* Après 10 tentatives de consultation, indépendamment du code client (donc basé notre adresse IP), on reçoit le même message d'erreur
+* Enfin EBOX a automatisé une plage de maintenance pendant les 10 premières minutes de chaque heure, où il n'est pas possible d'avoir sa consommation et pendant laquelle on reçoit un message d'erreur indiquant de revenir à HH:10.
 
+Dans le [prochain article]({% post_url 2017-01-23-ebox-alert-3 %}), je vous expliquerai comment ce service tourne 7j/7 et 24h/24 et envoie des courriels et SMS d'alerte, le tout pour 0$/mois.
 
 
 [ebox-alert]: http://www.ebox-alert.ca "ebox-alert.ca"
