ebox-2 article continued

--- a/_posts/2017-01-22-ebox-alert-2.md
+++ b/_posts/2017-01-22-ebox-alert-2.md
@@ -5,11 +5,21 @@ published: true
 comments: false
 ---
 
-Dans l'[article précédent]({% post_url 2017-01-21-ebox-alert %}), je vous disais que EBOX a prévu un certain nombre de mesures pour éviter que des outils automatiques viennent consulter leur portail de suivi de la consommation, principalement parce que cela surchargerait leurs serveurs, surtout si ces outils sont mal configurés :
+Dans l'[article précédent]({% post_url 2017-01-21-ebox-alert %}), je vous disais que EBOX a prévu un certain nombre de mesures pour éviter que des outils automatiques viennent consulter leur portail de suivi de la consommation, principalement parce que cela surchargerait leurs serveurs, surtout si ces outils sont mal configurés.
+
+### Les mesures de protection d'EBOX
 
 * Après 5 tentatives de consultation de la consommation pour un même code client, on reçoit un message d'erreur nous disant de revenir dans une heure
 * Après 10 tentatives de consultation, indépendamment du code client (donc basé notre adresse IP), on reçoit le même message d'erreur
 * Enfin EBOX a automatisé une plage de maintenance pendant les 10 premières minutes de chaque heure, où il n'est pas possible d'avoir sa consommation et pendant laquelle on reçoit un message d'erreur indiquant de revenir à HH:10.
+
+### Comment les contourner
+
+### La stratégie d'EBOX par rapport aux outils de suivi de la consommation
+
+La strategie d'EBOX en terme de développement d'outils se focalise surtout sur le nouveau protail client. Ils ont peu de développeurs. Aussi le portail de suivi de la consommation est-il un peu négligé, ce qui est à notre avantage : en plus d'un an il n'y a pas eu de changement sur le contenu ou le format, ce qui fait que je n'ai pas eu à modifier les règles pour parser la page. Pas de changement non plus dans les stratégies listées ci-dessus pour limiter la charge induite par les robots comme le mien. Et peu de risque, même après la publication de cet article, que cela change, en tout cas pour l'ancien conso.ebox.ca.
+
+Cependant EBOX a déjà annoncé qu'ils vont supprimer ce portail lorsqu'ils auront une solution de rechange sous la forme d'une API, le travail sera donc en partie à refaire mais sera grandement simplifié si l'API est bien conçue (et elle devrait permettre officiellement de créer des outils comme le mien).
 
 Dans le [prochain article]({% post_url 2017-01-23-ebox-alert-3 %}), je vous expliquerai comment ce service tourne 7j/7 et 24h/24 et envoie des courriels et SMS d'alerte, le tout pour 0$/mois.
 
