--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -1,11 +1,14 @@
 ---
 layout: post
-title: Comment je roule un service disponible 24h/24 7j/7 pour 0$/mois
+title: How I run a 24/7 service for 0$ a month
 published: true
 comments: false
+french_title: Comment je roule un service disponible 24h/24 7j/7 pour 0$/mois
 ---
 
-This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX]({% post_url 2017-01-22-ebox-alert-2 %}).
+This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX]({% post_url 2017-01-22-ebox-alert-2 %}). People are often surprised I can run a 24/7 service for 0$/month[^1] (except for the cost of the ebox-alert.ca domain). In all honesty, I've used some real money at the beginning before I found a few solutions that I'm going to give you.
+
+And 
 
 SMS: ClickSend (1$ free credit upon new subscriptions)
 Heroku: Free tier is fine, web app will sleep avec 30min, so I just need to ping it every 20min and it won't sleep. Heroku offers 900min of run time in the free tier, which allows for more than one web application full time.
@@ -15,3 +18,4 @@ DeadManSnitch
 
 
 [ebox-alert]: http://www.ebox-alert.ca "ebox-alert.ca"
+[^1]: except for the domain name ebox-alert.ca, but I could very well have used the standard ebox-alert.herokuapp.com subdomain for free
