--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -6,23 +6,31 @@ comments: false
 french_title: Comment je roule un service disponible 24h/24 7j/7 pour 0$/mois
 ---
 
-This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX]({% post_url 2017-01-22-ebox-alert-2 %}). People are often surprised I can run a 24/7 service for 0$/month[^1] (except for the cost of the ebox-alert.ca domain). In all honesty, I've used some real money at the beginning before I find the solutions that I'm going to give you.
+This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX (in French)]({% post_url 2017-01-22-ebox-alert-2 %}). People are often surprised I can run a 24/7 service for 0$/month[^1] (except for the cost of the ebox-alert.ca domain). In all honesty, I've used some real money at the beginning before I find the solutions listed below.
 
 ### SMS notification feature
 
-First of all, the SMS. This typically costs real money if you really want to send an actual SMS to any Canadian phone number. There are ways to send MMS that are mobile carrier specific, but for SMS, carriers will charge a (small) fee.
+First of all, the SMS. This typically costs a cent or two if you really want to send an actual SMS to any Canadian phone number. There are ways to send free MMS that are mobile carrier specific, but for SMS, carriers will charge a (small) fee.
 
-Given the small number of SMS that I need to send, I don't want to handle the complexity of using or integrating with an open-source SMS gateway. I've found [ClickSend](https://www.clicksend.com). New accounts get 1$ free credit, which is not a lot but enough to send a bit less than 100 SMS.
+Given the small number of SMS that I need to send, I don't want to handle the complexity of using or integrating with an open-source SMS gateway. AND I've found [ClickSend](https://www.clicksend.com). New accounts get 1$ free credit, which is not a lot but enough to send a bit less than 100 SMS.
 
-I used to send SMS notifications for every alert threshold (75%, 90%, 100% and the +10GB threshold - 10GB over the plan), but I've found that the only thresholds that deserve an immediate notification are the 100% threshold (after which you start getting charges for over-usage) and the +10GB threshold (after which you should really buy usage blocks). And very few of my users reach 100% usage. So, by chosing which alerts deserve an SMS, I reduced the number of SMS sent by month to less than 10.
+I used to send SMS notifications for every alert threshold (75%, 90%, 100% and the +10GB threshold - 10GB over the plan), but then I figured the only thresholds that deserve an immediate notification are the 100% threshold (after which you start getting charges for over-usage) and the +10GB threshold (after which you should really buy usage blocks). And very few of my users reach 100% usage. So, by choosing which alerts deserve an immediate alert, I reduced the number of SMS sent by month to less than 10. And the free credit can last a few months.
 
-What should I do when I don't have credit left? Just close the account and register a new one, and change the access key through Heroku Dashboard. A few minute configuration once or twice a year at most.
+What should I do when I don't have credit left? Just close the account, register a new one, and change the access key through Heroku Dashboard. A few minute configuration once or twice a year at most.
 
 ### Heroku hosting
 
-Heroku: Free tier is fine, web app will sleep avec 30min, so I just need to ping it every 20min and it won't sleep. Heroku offers 900min of run time in the free tier, which allows for more than one web application full time.
-Uptimerobot: http://uptimerobot.com/ totally free to monitor even every 5 min (which is better than the previous service I used for that before: http://www.monitor.us/). Thanks to the monitoring, my application never sleeps. And I get a nice emails if there is anything wrong.
-DeadManSnitch
+Heroku has a free plan and a paid hobby plan. But there are not a lot of difference between the 2:
+- in the free tier, the application will sleep after 30min without web traffic (and boot if traffic comes)
+- free dyno are given 550h of run time but you can [bump it up to 1000h if you register a valid credit card](https://devcenter.heroku.com/articles/free-dyno-hours#consuming-hours).
+
+My app is a Java/Spring Boot webapp so it takes a noticeable amount of time to boot (sometimes more than 1min). So I cannot afford it to go sleeping or it will look as if the site is down when users come.
+To prevent it to fall asleep, I just need to ping it every 20min. 1000h of free tier is more than I need for a full time running app.
+
+http://uptimerobot.com/ totally free to monitor even every 5 min (which is better than the previous service I used for that before: http://www.monitor.us/). Thanks to the monitoring, my application never sleeps. And I get a nice email if there is anything wrong.
+
+Upcoming:
+* DeadManSnitch
 
 
 
