--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -21,6 +21,7 @@ What should I do when I don't have credit left? Just close the account, register
 ### Heroku hosting
 
 Heroku has a free plan and a paid hobby plan. But there are not a lot of difference between the 2:
+
 - in the free tier, the application will sleep after 30min without web traffic (and boot if traffic comes)
 - free dyno are given 550h of run time but you can [bump it up to 1000h if you register a valid credit card](https://devcenter.heroku.com/articles/free-dyno-hours#consuming-hours).
 
@@ -30,7 +31,8 @@ To prevent it to fall asleep, I just need to ping it every 20min. 1000h of free 
 http://uptimerobot.com/ totally free to monitor even every 5 min (which is better than the previous service I used for that before: http://www.monitor.us/). Thanks to the monitoring, my application never sleeps. And I get a nice email if there is anything wrong.
 
 Upcoming:
-* DeadManSnitch
+
+- DeadManSnitch
 
 
 
