--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -18,22 +18,28 @@ I used to send SMS notifications for every alert threshold (75%, 90%, 100% and t
 
 What should I do when I don't have credit left? Just close the account, register a new one, and change the access key through Heroku Dashboard. A few minute configuration once or twice a year at most.
 
-### Heroku hosting
+### Application hosting
 
-Heroku has a free plan and a paid hobby plan. But there are not a lot of difference between the 2:
+I host my application at [Heroku](https://heroku.com), because it is a Java application and Heroku allows me to focus on the app and not on hosting (I deliver the webapp as a war and they basically take care of the rest, in the [Platform as a Service](https://en.wikipedia.org/wiki/Platform_as_a_service) fashion). They have a [free plan and a paid hobby plan](https://www.heroku.com/pricing). But there are not a lot of difference between the 2:
 
 - in the free tier, the application will sleep after 30min without web traffic (and boot if traffic comes)
 - free dyno are given 550h of run time but you can [bump it up to 1000h if you register a valid credit card](https://devcenter.heroku.com/articles/free-dyno-hours#consuming-hours).
 
 My app is a Java/Spring Boot webapp so it takes a noticeable amount of time to boot (sometimes more than 1min). So I cannot afford it to go sleeping or it will look as if the site is down when users come.
-To prevent it to fall asleep, I just need to ping it every 20min. 1000h of free tier is more than I need for a full time running app.
+To prevent it to fall asleep, I just need to ping it every 29min. 1000h of free tier is more than I need for a full time running app (I need 744h to be precise).
 
-http://uptimerobot.com/ totally free to monitor even every 5 min (which is better than the previous service I used for that before: http://www.monitor.us/). Thanks to the monitoring, my application never sleeps. And I get a nice email if there is anything wrong.
+To ping it at regular interval, I use [Uptime Robot](http://uptimerobot.com/) which is free to monitor my website every 5 min. The previous service I used [Monitor.us](http://www.monitor.us/) had limitations on the frequency and was pushing me to hard towards a paid plan. Now, thanks to the monitoring, my application never sleeps. And I get a nice email if there is anything wrong, plus statistics for the response time of my homepage as a bonus.
 
-Upcoming:
+### Monitoring solutions
 
-- DeadManSnitch
+There are three aspects of [ebox-alert] that deserve a proper monitoring solution (I'll discuss the monitoring more in depth in a future post):
+- _"is the site up?"_: this is covered by [Uptime Robot](http://uptimerobot.com/) free plan as I mentioned earlier
+- _"are there any alerts/warnings in the logs (including memory over usage and other Heroku events)?"_: I use [logentries](https://logentries.com/), which is an Heroku addon with a free plan that is enough to get alerts by email when important events occur
+- _"is my background refresh&alert process running as expected?"_: this is actually the most critical part, for which [DeadManSnitch](https://deadmanssnitch.com) is the perfect fit. Whether my app crashes without logging anything, or the background process dies without notice, if DeadManSnitch does not see my app check in for an hour straigth, I'll get an alert by email from them. The free plan allows for a single "snitch" so I had to implement it in a way that ensures [ebox-alert] is 100% reliable.
 
+### Mailing solution
+
+That one is easy, the volume of emails sent by [ebox-alert] is low enough to remain in the free plan of [SendGrid](https://app.sendgrid.com/), also an Heroku addon.
 
 
 [ebox-alert]: http://www.ebox-alert.ca "ebox-alert.ca"
