--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -8,7 +8,7 @@ french_title: Comment je roule un service disponible 24h/24 7j/7 pour 0$/mois
 
 This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX (in French)]({% post_url 2017-01-22-ebox-alert-2 %}). People are often surprised I can run a 24/7 service for 0$/month[^1] (except for the cost of the ebox-alert.ca domain). In all honesty, I've used some real money at the beginning before I find the solutions listed below.
 
-### SMS notification feature
+### Free SMS notifications
 
 First of all, the SMS. This typically costs a cent or two if you really want to send an actual SMS to any Canadian phone number. There are ways to send free MMS that are mobile carrier specific, but for SMS, carriers will charge a (small) fee.
 
@@ -18,7 +18,7 @@ I used to send SMS notifications for every alert threshold (75%, 90%, 100% and t
 
 What should I do when I don't have credit left? Just close the account, register a new one, and change the access key through Heroku Dashboard. A few minute configuration once or twice a year at most.
 
-### Application hosting
+### Free application hosting
 
 I host my application at [Heroku](https://heroku.com), because it is a Java application and Heroku allows me to focus on the app and not on hosting (I deliver the webapp as a war and they basically take care of the rest, in the [Platform as a Service](https://en.wikipedia.org/wiki/Platform_as_a_service) fashion). They have a [free plan and a paid hobby plan](https://www.heroku.com/pricing). But there are not a lot of difference between the 2:
 
@@ -30,7 +30,7 @@ To prevent it to fall asleep, I just need to ping it every 29min. 1000h of free 
 
 To ping it at regular interval, I use [Uptime Robot](http://uptimerobot.com/) which is free to monitor my website every 5 min. The previous service I used [Monitor.us](http://www.monitor.us/) had limitations on the frequency and was pushing me to hard towards a paid plan. Now, thanks to the monitoring, my application never sleeps. And I get a nice email if there is anything wrong, plus statistics for the response time of my homepage as a bonus.
 
-### Monitoring solutions
+### Free monitoring solutions
 
 There are three aspects of [ebox-alert] that deserve a proper monitoring solution (I'll discuss the monitoring more in depth in a future post):
 
@@ -38,7 +38,7 @@ There are three aspects of [ebox-alert] that deserve a proper monitoring solutio
 - _"are there any alerts/warnings in the logs (including memory over usage and other Heroku events)?"_: I use [logentries](https://logentries.com/), which is an Heroku addon with a free plan that is enough to get alerts by email when important events occur
 - _"is my background refresh&alert process running as expected?"_: this is actually the most critical part, for which [DeadManSnitch](https://deadmanssnitch.com) is the perfect fit. Whether my app crashes without logging anything, or the background process dies without notice, if DeadManSnitch does not see my app check in for an hour straigth, I'll get an alert by email from them. The free plan allows for a single "snitch" so I had to implement it in a way that ensures [ebox-alert] is 100% reliable.
 
-### Mailing solution
+### Free mailing solution
 
 That one is easy, the volume of emails sent by [ebox-alert] is low enough to remain in the free plan of [SendGrid](https://app.sendgrid.com/), also an Heroku addon.
 
