2017-01-22-ebox-alert-2.md mis à jour

--- a/_posts/2017-01-22-ebox-alert-2.md
+++ b/_posts/2017-01-22-ebox-alert-2.md
@@ -24,6 +24,9 @@ C'est la limitation à 10 consultations par heure pour une même adresse IP qui 
 
 Avec ces deux contre-mesures, plusieurs dizaines de comptes peuvent être gérés avec un seul serveur proxy et le service peut grandir en ajoutant des serveurs proxy.
 
+![Architecture EBOX]({{site.baseurl}}/_posts/EBOX-Architecture.png)
+
+
 ### Le problème des proxies gratuits
 
 Utiliser des serveurs proxy gratuits à une limite : leur fiabilité. J'avais commencé avec une liste de 10 serveurs, mais en moins d'une semaine, la plupart des serveurs de la liste ne fonctionnaient plus. J'ai donc ajouté un module qui parse régulièrement une liste de serveurs proxy maintenue automatiquement (facile à trouver sur Google), et retourne l'un d'eux aléatoirement à la demande.
