2017-01-23-ebox-alert-3.md mis à jour

--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -8,6 +8,8 @@ french_title: Comment je roule un service disponible 24h/24 7j/7 pour 0$/mois
 
 This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX (in French)]({% post_url 2017-01-22-ebox-alert-2 %}). People are often surprised I can run a 24/7 service for 0$/month[^1] (except for the cost of the ebox-alert.ca domain). In all honesty, I've used some real money at the beginning before I find the solutions listed below.
 
+![Architecture EBOX]({{site.baseurl}}/_posts/EBOX-Architecture.png)
+
 ### Free SMS notifications
 
 First of all, the SMS. This typically costs a cent or two if you really want to send an actual SMS to any Canadian phone number. There are ways to send free MMS that are mobile carrier specific, but for SMS, carriers will charge a (small) fee.
