--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -4,6 +4,10 @@ title: How I run a 24/7 service for 0$ a month
 published: true
 comments: false
 french_title: Comment je roule un service disponible 24h/24 7j/7 pour 0$/mois
+category: ebox-alert
+tags:
+  - ebox-alert
+  - hosting
 ---
 
 This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX (in French)]({% post_url 2017-01-22-ebox-alert-2 %}). People are often surprised I can run a 24/7 service for 0$/month[^1] (except for the cost of the ebox-alert.ca domain). In all honesty, I've used some real money at the beginning before I find the solutions listed below.
