--- a/_posts/2017-01-22-ebox-alert-2.md
+++ b/_posts/2017-01-22-ebox-alert-2.md
@@ -3,6 +3,9 @@ layout: post
 title: Comment je contourne les restrictions avec une armée de proxies
 published: true
 comments: false
+category: ebox-alert
+tags:
+  - ebox-alert
 ---
 
 Dans l'[article précédent]({% post_url 2017-01-21-ebox-alert %}), je vous disais que EBOX a prévu un certain nombre de mesures pour éviter que des outils automatiques viennent consulter leur portail de suivi de la consommation, principalement parce que cela surchargerait leurs serveurs, surtout si ces outils sont mal configurés.
