--- a/_posts/2005-12-31-archives.md
+++ b/_posts/2005-12-31-archives.md
@@ -4,6 +4,8 @@ title: Mes projets archivés
 published: true
 comments: false
 permalink: /archives/
+category: archives
+tags: null
 ---
 
 Voici l'un des projets que j'ai réalisé à l'École Polytechnique. Je n'ai pas retrouvé la trace du code source, GitHub étant apparu bien après.
