--- a/_posts/2017-01-22-ebox-alert-2.md
+++ b/_posts/2017-01-22-ebox-alert-2.md
@@ -3,7 +3,7 @@ layout: post
 title: Comment je contourne les restrictions avec une armée de proxies
 published: true
 comments: false
-category: ebox-alert
+category: web-development
 tags:
   - ebox-alert
 ---
