--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -4,7 +4,7 @@ title: How I run a 24/7 service for 0$ a month
 published: true
 comments: false
 french_title: Comment je roule un service disponible 24h/24 7j/7 pour 0$/mois
-category: ebox-alert
+category: web-development
 tags:
   - ebox-alert
   - hosting
