minor changes in "running for free"

--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -10,8 +10,11 @@ tags:
   - hosting
 ---
 
-This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX (in French)]({% post_url 2017-01-22-ebox-alert-2 %}). People are often surprised I can run a 24/7 service for 0$/month[^1] (except for the cost of the ebox-alert.ca domain). In all honesty, I've used some real money at the beginning before I find the solutions listed below.
+This articles follows [the article about how I've built EBOX Alert to circumvent restrictions imposed by EBOX (in French)]({% post_url 2017-01-22-ebox-alert-2 %}). People are often surprised I can run a 24/7 service for 0$/month. And yet this is true, here are the solutions I've found.
 
+(In all honesty, there is one thing that is not free: the ebox-alert.ca domain, but I could very well have used the standard ebox-alert.herokuapp.com subdomain for free.)
+
+Here is a view of the architecture of the service:
 ![Architecture EBOX]({{site.baseurl}}/images/EBOX-Architecture.png)
 
 ### Free SMS notifications
@@ -50,4 +53,3 @@ That one is easy, the volume of emails sent by [ebox-alert] is low enough to rem
 
 
 [ebox-alert]: http://www.ebox-alert.ca "ebox-alert.ca"
-[^1]: except for the domain name ebox-alert.ca, but I could very well have used the standard ebox-alert.herokuapp.com subdomain for free
