--- a/_posts/2017-01-22-ebox-alert-2.md
+++ b/_posts/2017-01-22-ebox-alert-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Comment je contourne les restrictions avec une armée de proxies
+title: Passer EBOX Alert à l'échelle en contournant les restrictions
 published: true
 comments: false
 category: web-development
@@ -37,12 +37,6 @@ Utiliser des serveurs proxy gratuits à une limite : leur fiabilité. J'avais co
 Seulement même dans cette liste de serveurs proxy, supposément testés, il y en a qui ne répondent pas. Comme je ne parallélise pas les requêtes pour simplifier la boucle de mise à jour des comptes, et pour être gentil avec EBOX et rester sous le radar, cela pose un vrai problème si 30% des requêtes prennent 30 secondes pour ensuite échouer. Je n'ai pas assez d'une heure pour mettre à jour tous les comptes. 
 
 Donc pour éviter d'avoir trop de requêtes qui expirent (timeout à cause du proxy), j'ai ajouté un mécanisme de liste noire (black-list) pour les proxies, après 3 échecs dans les dernières 6 heures. Et désormais le taux de succès est très élevé.
-
-### La stratégie d'EBOX par rapport aux outils de suivi de la consommation
-
-La strategie d'EBOX en terme de développement d'outils se focalise surtout sur le nouveau protail client. Ils ont peu de développeurs. Aussi le portail de suivi de la consommation est-il un peu négligé, ce qui est à notre avantage : en plus d'un an il n'y a pas eu de changement sur le contenu ou le format, ce qui fait que je n'ai pas eu à modifier les règles pour parser la page. Pas de changement non plus dans les stratégies listées ci-dessus pour limiter la charge induite par les robots comme le mien. Et peu de risque, même après la publication de cet article, que cela change, en tout cas pour l'ancien conso.ebox.ca.
-
-Cependant EBOX a déjà annoncé qu'ils vont supprimer ce portail lorsqu'ils auront une solution de rechange sous la forme d'une API, le travail sera donc en partie à refaire mais sera grandement simplifié si l'API est bien conçue (et elle devrait permettre officiellement de créer des outils comme le mien).
 
 Dans le [prochain article]({% post_url 2017-01-23-ebox-alert-3 %}), je vous expliquerai comment ce service tourne 7j/7 et 24h/24 et envoie des courriels et SMS d'alerte, le tout pour 0$/mois.
 
