2017-01-23-ebox-alert-3.md mis à jour

--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -51,5 +51,6 @@ There are three aspects of [ebox-alert] that deserve a proper monitoring solutio
 
 That one is easy, the volume of emails sent by [ebox-alert] is low enough to remain in the free plan of [SendGrid](https://app.sendgrid.com/), also an Heroku addon.
 
+In next article (in French), I will be talking more in depth about the [monitoring and reliability of EBOX Alert]({% post_url 2017-01-24-ebox-alert-monitoring %}).
 
 [ebox-alert]: http://www.ebox-alert.ca "ebox-alert.ca"
