2017-01-23-ebox-alert-3.md mis à jour

--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -27,6 +27,8 @@ I used to send SMS notifications for every alert threshold (75%, 90%, 100% and t
 
 What should I do when I don't have credit left? Just close the account, register a new one, and change the access key through Heroku Dashboard. A few minute configuration once or twice a year at most.
 
+\[edit\]: Another alternative would be [Amazon SNS](https://aws.amazon.com/en/sns/sms-pricing) with *no required payment upfront* -- pay as you go --, and less than 0,004$/sms or even less for most operators (less than 0,001$ for Rogers).
+
 ### Free application hosting
 
 I host my application at [Heroku](https://heroku.com), because it is a Java application and Heroku allows me to focus on the app and not on hosting (I deliver the webapp as a war and they basically take care of the rest, in the [Platform as a Service](https://en.wikipedia.org/wiki/Platform_as_a_service) fashion). They have a [free plan and a paid hobby plan](https://www.heroku.com/pricing). But there are not a lot of difference between the 2:
