2017-01-23-ebox-alert-3.md mis à jour

--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -53,6 +53,19 @@ There are three aspects of [ebox-alert] that deserve a proper monitoring solutio
 
 That one is easy, the volume of emails sent by [ebox-alert] is low enough to remain in the free plan of [SendGrid](https://app.sendgrid.com/), also an Heroku addon.
 
-In next article (in French), I will be talking more in depth about the [monitoring and reliability of EBOX Alert]({% post_url 2017-01-24-ebox-alert-monitoring %}).
+### Supporting HTTPS
+
+Google Chrome displays an "insecure" warning when a webpage requests a password over plain-HTTP, so supporting HTTPS is becoming a must have for applications with login forms nowadays. Heroku apps get free SSL support on the https://customapp.herokuapp.com domain, but if you want your own domain, you need paid a addon and your SSL certificate.
+
+The 0$ solution I've found is using Amazon WebService (AWS) CDN (Content Delivery Network) service: CloudFront, along with certificates provided by AWS Certificate Manager.
+
+* AWS Certificate Manager offers free certificates (even for custom domain names) that can be used with Amazon CloudFront. 
+* In the free tier, Amazon CloudFront is free below 50GB of data transfer and 2 million requests per month. And after one year, once you're not eligible to the free tier anymore, unless you host a site with a lot of traffic, it should cost less than 0.25$/month (check [AWS CloudFront Pricing](https://aws.amazon.com/cloudfront/pricing/)). The pay-as-you-grow model with no upfront cost is great for small services.
+
+With AWS CloudFront, the service remains hosted by Heroku, exposed securely over HTTPS on https://customapp.herokuapp.com. But your custom domain directs https://www.customdomain.ca traffic to CloudFront CDN (with a DNS CNAME entry). CloudFront can be used to cache some content in regional datacenters, for faster access, but that's not why we use it. By configuring the CloudFront distribution origin site to be https://customapp.herokuapp.com, you now have your site reverse-proxied and accessible over HTTPS on your own domain.
+
+### Conclusion
+
+That all for running a 24/7 service for 0$ a month. In next article (in French), I will be talking more in depth about the [monitoring and reliability of EBOX Alert]({% post_url 2017-01-24-ebox-alert-monitoring %}).
 
 [ebox-alert]: http://www.ebox-alert.ca "ebox-alert.ca"
