2017-01-23-ebox-alert-3.md mis à jour

--- a/_posts/2017-01-23-ebox-alert-3.md
+++ b/_posts/2017-01-23-ebox-alert-3.md
@@ -55,7 +55,7 @@ That one is easy, the volume of emails sent by [ebox-alert] is low enough to rem
 
 ### Supporting HTTPS
 
-Google Chrome displays an "insecure" warning when a webpage requests a password over plain-HTTP, so supporting HTTPS is becoming a must have for applications with login forms nowadays. Heroku apps get free SSL support on the https://customapp.herokuapp.com domain, but if you want your own domain, you need paid a addon and your SSL certificate.
+Google Chrome displays an "insecure" warning when a webpage requests a password over plain-HTTP, so supporting HTTPS is becoming a must have for applications with login forms nowadays. Heroku apps get free SSL support on the `https://customapp.herokuapp.com` domain, but if you want your own domain, you will need a paid addon or upgrade to a paid plan. And you'll need to obtain your own SSL certificate.
 
 The 0$ solution I've found is using Amazon WebService (AWS) CDN (Content Delivery Network) service: CloudFront, along with certificates provided by AWS Certificate Manager.
 
